--- a/2第二阶段/2-day03【存储引擎、索引】.md
+++ b/2第二阶段/2-day03【存储引擎、索引】.md
@@ -610,7 +610,7 @@ SHOW GLOBAL STATUS LIKE 'Com_______';		-- 一共有7个下划线，com_______也
 
 通过上述指令，我们可以查看到当前数据库到底是以查询为主，还是以增删改为主，从而为数据 库优化提供参考依据。 如果是以增删改为主，我们可以考虑不对其进行索引的优化。 如果是以查询为主，那么就要考虑对数据库的索引进行优化了。
 
-### 慢查询日志
+### 3.4.2 慢查询日志
 
 慢查询日志记录了所有执行时间超过指定参数（long_query_time，单位：秒，默认10秒）的所有SQL语句的日志。
 
@@ -627,173 +627,328 @@ long_query_time=2
 
 查看慢查询日志开关状态：`show variables like 'slow_query_log';`
 
-### profile
+### 3.4.3 profile文件
 
-show profile 能在做SQL优化时帮我们了解时间都耗费在哪里。通过 have_profiling 参数，能看到当前 MySQL 是否支持 profile 操作：
-`SELECT @@have_profiling;`
-profiling 默认关闭，可以通过set语句在session/global级别开启 profiling：
-`SET profiling = 1;`
-查看所有语句的耗时：
-`show profiles;`
-查看指定query_id的SQL语句各个阶段的耗时：
-`show profile for query query_id;`
-查看指定query_id的SQL语句CPU的使用情况
-`show profile cpu for query query_id;`
+show profiles 能在做SQL优化时帮我们了解时间都耗费在哪里。通过 have_profiling 参数，能看到当前 MySQL 是否支持 profile 操作：
 
-### explain
+```sql
+SELECT @@have_profiling;
+```
 
-EXPLAIN 或者 DESC 命令获取 MySQL 如何执行 SELECT 语句的信息，包括在 SELECT 语句执行过程中表如何连接和连接的顺序。
-语法：
-	# 直接在select语句之前加上关键字 explain / desc
-	EXPLAIN SELECT 字段列表 FROM 表名 HWERE 条件;
+```sh
++------------------+
+| @@have_profiling |
++------------------+
+| YES              |
++------------------+
+```
 
-EXPLAIN 各字段含义：
+可以看到，当前MySQL是支持 profile操作的，但是开关是关闭的。可以通过set语句在 session/global级别开启profiling：
 
-- id：select 查询的序列号，表示查询中执行 select 子句或者操作表的顺序（id相同，执行顺序从上到下；id不同，值越大越先执行）
+```sql
+SET profiling = 1;
+```
 
-- select_type：表示 SELECT 的类型，常见取值有 SIMPLE（简单表，即不适用表连接或者子查询）、PRIMARY（主查询，即外层的查询）、UNION（UNION中的第二个或者后面的查询语句）、SUBQUERY（SELECT/WHERE之后包含了子查询）等
+```sql
+show profiles;							-- 查看所有语句的耗时
+show profile for query query_id;			-- 查看指定query_id的SQL语句各个阶段的耗时 
+show profile cpu for query query_id;		-- 查看指定query_id的SQL语句CPU的使用情况
+```
 
-- type：表示连接类型，性能由好到差的连接类型为 NULL、system、const、eq_ref、ref、range、index、all
+### 3.4.5 explain
 
-- possible_key：可能应用在这张表上的索引，一个或多个
+EXPLAIN 或者 DESC命令获取 MySQL 如何执行 SELECT 语句的信息，包括在 SELECT 语句执行 过程中表如何连接和连接的顺序。
 
-- Key：实际使用的索引，如果为 NULL，则没有使用索引
+```sql
+-- 直接在select语句之前加上关键字 explain / desc
+EXPLAIN SELECT 字段列表 FROM 表名 WHERE 条件 ;
+```
 
-- Key_len：表示索引中使用的字节数，该值为索引字段最大可能长度，并非实际使用长度，在不损失精确性的前提下，长度越短越好
+![](D:\Java\笔记\图片\3-day01 【MySQL基础】\12-8.png)
 
-- rows：MySQL认为必须要执行的行数，在InnoDB引擎的表中，是一个估计值，可能并不总是准确的
+Explain 执行计划中各个字段的含义：
 
-- filtered：表示返回结果的行数占需读取行数的百分比，filtered**的值越大越好**
+- `id`：select 查询的序列号，表示查询中执行 select 子句或者操作表的顺序（id相同，执行顺序从上到下；id不同，值越大越先执行）
+- `select_type`：表示 SELECT 的类型，常见取值有 SIMPLE（简单表，即不适用表连接或者子查询）、PRIMARY（主查询，即外层的查询）、UNION（UNION中的第二个或者后面的查询语句）、SUBQUERY（SELECT/WHERE之后包含了子查询）等
+- `type`：表示连接类型，性能由好到差的连接类型为 NULL、system、const、eq_ref、ref、range、index、all，尽量将性能提升到const就可以了。
+- `possible_key`：可能应用在这张表上的索引，一个或多个
+- `Key`：实际使用的索引，如果为 NULL，则没有使用索引
+- `Key_len`：表示索引中使用的字节数，该值为索引字段最大可能长度，并非实际使用长度，在不损失精确性的前提下，长度越短越好
+- `rows`：MySQL认为必须要执行的行数，在InnoDB引擎的表中，是一个估计值，可能并不总是准确的
+- `filtered`：表示返回结果的行数占需读取行数的百分比，filtered**的值越大越好**
 
-- ### 查看执行频次
+## 3.5 索引使用规则
 
-  查看当前数据库的 INSERT, UPDATE, DELETE, SELECT 访问频次：
-  `SHOW GLOBAL STATUS LIKE 'Com_______';` 或者 `SHOW SESSION STATUS LIKE 'Com_______';`
-  例：`show global status like 'Com_______'`
+### 3.5.1 最左前缀法则
 
-  ### 慢查询日志
+如果索引关联了多列（联合索引），要遵守最左前缀法则，最左前缀法则指的是查询从索引的最左列开始，并且不跳过索引中的列。如果跳跃某一列，索引将部分失效（后面的字段索引失效）。
 
-  慢查询日志记录了所有执行时间超过指定参数（long_query_time，单位：秒，默认10秒）的所有SQL语句的日志。
-  MySQL的慢查询日志默认没有开启，需要在MySQL的配置文件（/etc/my.cnf）中配置如下信息：
-  	# 开启慢查询日志开关
-  	slow_query_log=1
-  	# 设置慢查询日志的时间为2秒，SQL语句执行时间超过2秒，就会视为慢查询，记录慢查询日志
-  	long_query_time=2
-  更改后记得重启MySQL服务，日志文件位置：/var/lib/mysql/localhost-slow.log
+注意 ： 最左前缀法则中指的最左边的列，是指在查询时，联合索引的最左边的字段(即是 第一个字段)必须存在，与我们编写SQL时，条件编写的先后顺序无关。
 
-  查看慢查询日志开关状态：
-  `show variables like 'slow_query_log';`
+* 创建一个表tb_user，包含的字段如下：
 
-  ### profile
+  ```sql
+  +------------+------------------+------+-----+---------+----------------+
+  | Field      | Type             | Null | Key | Default | Extra          |
+  +------------+------------------+------+-----+---------+----------------+
+  | id         | int              | NO   | PRI | NULL    | auto_increment |
+  | name       | varchar(50)      | NO   | MUL | NULL    |                |
+  | phone      | varchar(11)      | NO   | UNI | NULL    |                |
+  | email      | varchar(100)     | YES  |     | NULL    |                |
+  | profession | varchar(11)      | YES  | MUL | NULL    |                |
+  | age        | tinyint unsigned | YES  |     | NULL    |                |
+  | gender     | char(1)          | YES  |     | NULL    |                |
+  | status     | char(1)          | YES  |     | NULL    |                |
+  | createtime | datetime         | YES  |     | NULL    |                |
+  +------------+------------------+------+-----+---------+----------------+
+  ```
 
-  show profile 能在做SQL优化时帮我们了解时间都耗费在哪里。通过 have_profiling 参数，能看到当前 MySQL 是否支持 profile 操作：
-  `SELECT @@have_profiling;`
-  profiling 默认关闭，可以通过set语句在session/global级别开启 profiling：
-  `SET profiling = 1;`
-  查看所有语句的耗时：
-  `show profiles;`
-  查看指定query_id的SQL语句各个阶段的耗时：
-  `show profile for query query_id;`
-  查看指定query_id的SQL语句CPU的使用情况
-  `show profile cpu for query query_id;`
+* 给字段profession，age，status添加索引：
 
-  ### explain
+  ```sql
+  create index idx_user_pro_age_sta on tb_user(profession, age, status);		-- 添加索引
+  ```
 
-  EXPLAIN 或者 DESC 命令获取 MySQL 如何执行 SELECT 语句的信息，包括在 SELECT 语句执行过程中表如何连接和连接的顺序。
-  语法：
-  	# 直接在select语句之前加上关键字 explain / desc
-  	EXPLAIN SELECT 字段列表 FROM 表名 HWERE 条件;
+  ```sql
+  show index from tb_user;			-- 查看索引
+  ```
 
-  EXPLAIN 各字段含义：
+* 根据索引来查询，测试
 
-  - id：select 查询的序列号，表示查询中执行 select 子句或者操作表的顺序（id相同，执行顺序从上到下；id不同，值越大越先执行）
-  - select_type：表示 SELECT 的类型，常见取值有 SIMPLE（简单表，即不适用表连接或者子查询）、PRIMARY（主查询，即外层的查询）、UNION（UNION中的第二个或者后面的查询语句）、SUBQUERY（SELECT/WHERE之后包含了子查询）等
-  - type：表示连接类型，性能由好到差的连接类型为 NULL、system、const、eq_ref、ref、range、index、all
-  - possible_key：可能应用在这张表上的索引，一个或多个
-  - Key：实际使用的索引，如果为 NULL，则没有使用索引
-  - Key_len：表示索引中使用的字节数，该值为索引字段最大可能长度，并非实际使用长度，在不损失精确性的前提下，长度越短越好
-  - rows：MySQL认为必须要执行的行数，在InnoDB引擎的表中，是一个估计值，可能并不总是准确的
-  - filtered：表示返回结果的行数占需读取行数的百分比，filtered的值越大越好
+  ```sql
+  explain select * from tb_user where profession = '软件工程' and age = 31 and status = '0';
+  
+  +----------------------+----------------------+---------+
+  | possible_keys        | key                  | key_len |	-- 预计使用索引：idx_user_pro_age_sta
+  +----------------------+----------------------+---------+	-- 使用索引：idx_user_pro_age_sta
+  | idx_user_pro_age_sta | idx_user_pro_age_sta | 54      |	-- 索引长度：54
+  +----------------------+----------------------+---------+
+  ```
 
+  ```sql
+  explain select * from tb_user where profession = '软件工程' and age = 31; -- 跳过某一列 索引部分失效
+  
+  +----------------------+----------------------+---------+	    
+  | possible_keys        | key                  | key_len |	-- 预计使用索引：idx_user_pro_age_sta 
+  +----------------------+----------------------+---------+	-- 使用索引：idx_user_pro_age_sta
+  | idx_user_pro_age_sta | idx_user_pro_age_sta | 49      |	-- 索引长度：49
+  +----------------------+----------------------+---------+
+  ```
 
+  ```sql
+  explain select * from tb_user where profession = '软件工程';   -- 跳过某一列，索引部分失效
+  
+  +----------------------+----------------------+---------+
+  | possible_keys        | key                  | key_len |	-- 预计使用索引：idx_user_pro_age_sta
+  +----------------------+----------------------+---------+	-- 使用索引：idx_user_pro_age_sta
+  | idx_user_pro_age_sta | idx_user_pro_age_sta | 47      |	-- 索引长度：47
+  +----------------------+----------------------+---------+
+  ```
 
-### 使用规则
+  ```sql
+  explain select * from tb_user where age = 31 and status = '0';	-- 没有最左索引，因此索引失效
+  
+  +---------------+------+---------+
+  | possible_keys | key  | key_len |			-- 预计使用索引：NULL
+  +---------------+------+---------+			-- 使用索引：NULL
+  | NULL          | NULL | NULL    |			-- 索引长度：NULL
+  +---------------+------+---------+
+  ```
 
-#### 最左前缀法则
-
-如果索引关联了多列（联合索引），要遵守最左前缀法则，最左前缀法则指的是查询从索引的最左列开始，并且不跳过索引中的列。
-如果跳跃某一列，索引将部分失效（后面的字段索引失效）。
+  ```sql
+  -- 查询顺序于索引顺序不容，当然没有任何问题，依然使用索引查询。
+  explain select * from tb_user where age = 31 and status = '0' and profession = "软件工程";
+  
+  +----------------------+----------------------+---------+
+  | possible_keys        | key                  | key_len |	-- 预计使用索引：idx_user_pro_age_sta
+  +----------------------+----------------------+---------+	-- 使用索引：idx_user_pro_age_sta
+  | idx_user_pro_age_sta | idx_user_pro_age_sta | 54      |	-- 索引长度：54
+  +----------------------+----------------------+---------+
+  ```
 
 联合索引中，出现范围查询（<, >），范围查询右侧的列索引失效。可以用>=或者<=来规避索引失效问题。
 
-#### 索引失效情况
+### 3.5.2 索引失效情况
 
-1. 在索引列上进行运算操作，索引将失效。如：`explain select * from tb_user where substring(phone, 10, 2) = '15';`
-2. 字符串类型字段使用时，不加引号，索引将失效。如：`explain select * from tb_user where phone = 17799990015;`，此处phone的值没有加引号
-3. 模糊查询中，如果仅仅是尾部模糊匹配，索引不会是失效；如果是头部模糊匹配，索引失效。如：`explain select * from tb_user where profession like '%工程';`，前后都有 % 也会失效。
-4. 用 or 分割开的条件，如果 or 其中一个条件的列没有索引，那么涉及的索引都不会被用到。
-5. 如果 MySQL 评估使用索引比全表更慢，则不使用索引。
+在索引列上进行运算操作，索引将失效。
 
-#### SQL 提示
+```sql
+-- 对phone字段添加一个唯一索引，然后查询后两位为15的phone。这样会导致索引失效，因为用到了函数
+explain select * from tb_user where substring(phone, 10, 2) = '15';		
+```
 
-是优化数据库的一个重要手段，简单来说，就是在SQL语句中加入一些人为的提示来达到优化操作的目的。
 
-例如，使用索引：
-`explain select * from tb_user use index(idx_user_pro) where profession="软件工程";`
-不使用哪个索引：
-`explain select * from tb_user ignore index(idx_user_pro) where profession="软件工程";`
-必须使用哪个索引：
-`explain select * from tb_user force index(idx_user_pro) where profession="软件工程";`
 
-use 是建议，实际使用哪个索引 MySQL 还会自己权衡运行速度去更改，force就是无论如何都强制使用该索引。
+字符串类型字段使用时，不加引号，索引将失效。
 
-#### 覆盖索引&回表查询
+```sql
+-- 索引失效 phone字段是varchar(11)，可是并没有加上引号。因此索引失效
+explain select * from tb_user where phone = 17799990015;
+```
 
-尽量使用覆盖索引（查询使用了索引，并且需要返回的列，在该索引中已经全部能找到），减少 select *。
 
-explain 中 extra 字段含义：
-`using index condition`：查找使用了索引，但是需要回表查询数据
-`using where; using index;`：查找使用了索引，但是需要的数据都在索引列中能找到，所以不需要回表查询
 
-如果在聚集索引中直接能找到对应的行，则直接返回行数据，只需要一次查询，哪怕是select \*；如果在辅助索引中找聚集索引，如`select id, name from xxx where name='xxx';`，也只需要通过辅助索引(name)查找到对应的id，返回name和name索引对应的id即可，只需要一次查询；如果是通过辅助索引查找其他字段，则需要回表查询，如`select id, name, gender from xxx where name='xxx';`
+模糊查询中，如果仅仅是尾部模糊匹配，索引不会是失效；如果是头部模糊匹配，索引失效。
 
-所以尽量不要用`select *`，容易出现回表查询，降低效率，除非有联合索引包含了所有字段
+```sql
+-- 模糊查询，头部模糊查询，索引失效
+explain select * from tb_user where profession like '%工程';
+```
 
-面试题：一张表，有四个字段（id, username, password, status），由于数据量大，需要对以下SQL语句进行优化，该如何进行才是最优方案：
-`select id, username, password from tb_user where username='itcast';`
 
-解：给username和password字段建立联合索引，则不需要回表查询，直接覆盖索引
 
-#### 前缀索引
+用 or 分割开的条件，如果 or 其中一个条件的列没有索引，那么涉及的索引都不会被用到。
+
+```sql
+-- phone有索引，但是age没有索引 所以不走索引。全表扫描
+explain select * from tb_user where phone = '17799990017' or age = 23;
+```
+
+
+
+数据分步影响：如果 MySQL 评估使用索引比全表更慢，则不使用索引。
+
+### 3.5.3 SQL 提示
+
+有时候我们查询一个字段，但是与该字段相关联的索引有多个，这个时候我们就需要来指定索引了。
+
+SQL提示，是优化数据库的一个重要手段，简单来说，就是在SQL语句中加入一些人为的提示来达到优化操作的目的。
+
+```sql
+-- 为profession创建一个联合索引及单列索引
+explain select * from tb_user where profession = "软件工程";
+
+-- 可能用到的索引有两个：idx_user_pro_age_sta, idx_user_pro
+-- 实际用到的索引为 idx_user_pro_age_sta 联合索引
++------+-----------------------------------+----------------------+
+| type | possible_keys                     | key                  |	
++------+-----------------------------------+----------------------+	
+| ref  | idx_user_pro_age_sta,idx_user_pro | idx_user_pro_age_sta |
++------+-----------------------------------+----------------------+
+```
+
+这时候我们可以利用SQL提示来指定使用的索引了：
+
+```sql
+-- 建议使用该索引
+explain select * from tb_user use index(idx_user_pro) where profession="软件工程";
+```
+
+```sql
+-- 不使用该索引
+explain select * from tb_user ignore index(idx_user_pro) where profession="软件工程";
+```
+
+```sql
+-- 必须使用该索引
+explain select * from tb_user force index(idx_user_pro) where profession="软件工程";
+```
+
+### 3.5.4 覆盖索引
+
+覆盖索引是指查询使用了索引，并且需要返回的列，在该索引中已经全部能够找到 。尽量使用覆盖索引，减少`select *`。 
+
+```sql
+-- 之前已经为profession age status创建了联合索引了
+explain select id, profession, age, status from tb_user where profession = "软件工程" and age = 31 and status = '0';
+
+-- using where; using index; 查找使用了索引，但是需要的数据都在索引列中能找到，所以不需要回表查询
++--------------------------+
+| Extra                    |
++--------------------------+
+| Using where; Using index |
++--------------------------+
+```
+
+```sql
+-- 查询的字段比上面多了一个status，联合索引里面并没有status
+explain select id, profession, age, status, gender from tb_user where profession = "软件工程" and age = 31 and status = '0'; 
+
+-- using index condition 查找使用了索引，但是需要回表查询数据
++-----------------------+
+| Extra                 |
++-----------------------+
+| Using index condition |
++-----------------------+
+```
+
+在tb_user表中有一个联合索引 `idx_user_pro_age_sta`，该索引关联了三个字段 `profession`、`age`、`status`，而这个索引也是一个二级索引，所以叶子节点下面挂的是这一行的主键id。 所以当我们查询返回的数据在 `id`、`profession`、`age`、`status` 之中，则直接走二级索引直接返回数据了。
+
+ 如果超出这个范围，就需要拿到主键id，再去扫描聚集索引，再获取额外的数据了，这个过程就是回表。 而我们如果一直使用`select *` 查询返回所有字段值，很容易就会造成回表查询（除非是根据主键查询，此时只会扫描聚集索引）。
+
+> 面试题：一张表，有四个字段（id, username, password, status），由于数据量大，需要对以下SQL语句进行优化，该如何进行才是最优方案：
+> `select id, username, password from tb_user where username='itcast';`
+>
+> 解：给username和password字段建立联合索引，则不需要回表查询，直接覆盖索引
+
+### 3.5.5 前缀索引
 
 当字段类型为字符串（varchar, text等）时，有时候需要索引很长的字符串，这会让索引变得很大，查询时，浪费大量的磁盘IO，影响查询效率，此时可以只降字符串的一部分前缀，建立索引，这样可以大大节约索引空间，从而提高索引效率。
 
-语法：`create index idx_xxxx on table_name(columnn(n));`
+```sql
+create index idx_xxxx on table_name(columnn(n));			-- 前缀索引语法
+```
+
 前缀长度：可以根据索引的选择性来决定，而选择性是指不重复的索引值（基数）和数据表的记录总数的比值，索引选择性越高则查询效率越高，唯一索引的选择性是1，这是最好的索引选择性，性能也是最好的。
-求选择性公式：
 
 ```mysql
 select count(distinct email) / count(*) from tb_user;
 select count(distinct substring(email, 1, 5)) / count(*) from tb_user;
 ```
 
-show index 里面的sub_part可以看到接取的长度
+show index 里面的sub_part可以看到截取的长度
 
-#### 单列索引&联合索引
+```sql
+ create index idx_user_email_5 on tb_user(email(5));		-- 创建email字段的前缀索引 长度为5
+ 
+ show index from tb_user \G;							-- 查看所有索引
+
+*************************** 7. row ***************************	-- 第7个索引
+        Table: tb_user
+   Non_unique: 1
+     Key_name: idx_user_email_5
+ Seq_in_index: 1
+  Column_name: email
+    Collation: A
+  Cardinality: 23
+     Sub_part: 5		-- 索引截取长度
+       Packed: NULL
+         Null: YES
+   Index_type: BTREE
+      Comment: 
+Index_comment: 
+      Visible: YES
+   Expression: NULL
+```
+
+![](D:\Java\笔记\图片\3-day01 【MySQL基础】\12-9.png)
+
+### 3.5.6 单列索引&联合索引
 
 单列索引：即一个索引只包含单个列
+
 联合索引：即一个索引包含了多个列
+
 在业务场景中，如果存在多个查询条件，考虑针对于查询字段建立索引时，建议建立联合索引，而非单列索引。
 
-单列索引情况：
-`explain select id, phone, name from tb_user where phone = '17799990010' and name = '韩信';`
-这句只会用到phone索引字段
+```sql
+-- 在tb_user表里面存在着phone和name的单列索引
+explain select * from tb_user where phone = "17799990010" and name = "韩信";
 
-##### 注意事项
+-- 预计使用到的索引：idx_user_pho，idx_user_name
+-- 使用到的索引：idx_user_pho
++----------------------------+--------------+
+| possible_keys              | key          |
++----------------------------+--------------+
+| idx_user_pho,idx_user_name | idx_user_pho |
++----------------------------+--------------+
+```
 
-- 多条件联合查询时，MySQL优化器会评估哪个字段的索引效率更高，会选择该索引完成本次查询
+多条件联合查询时，MySQL优化器会评估哪个字段的索引效率更高，会选择该索引完成本次查询
 
-### 设计原则
+在业务场景中，如果存在多个查询条件，考虑针对于查询字段建立索引时，建议建立联合索引，而非单列索引。
+
+## 3.6 设计原则
 
 1. 针对于数据量较大，且查询比较频繁的表建立索引
 2. 针对于常作为查询条件（where）、排序（order by）、分组（group by）操作的字段建立索引
