--- a/1第一阶段/1-04 【Map集合】.md
+++ b/1第一阶段/1-04 【Map集合】.md
@@ -4,39 +4,39 @@
 
 `ArrayList`是一个动态数组，查询快、增删慢。`ArrayList`是线程不安全的，运行效率快，允许元素为`null`。
 
-1. <font color = "red">ArrayList与LinkedList的区别有哪些？</font>
+1. ArrayList与LinkedList的区别有哪些？
 
    * `ArrayList`的底层数据结构为数组，增删慢、查询快，线程不安全，效率高。
 
    * `LinkedList`的底层数据结构为链表，增删快、查询慢，线程不安全，效率高。
 
-2. <font color = "red">ArrayList与Vector的区别？</font>
+2. ArrayList与Vector的区别？
 
    * `Vector`底层数据结构为数组，增删慢、查询快，线程安全，效率低，每次扩容为原来数组的2倍。
 
    * `ArrayList`底层数据结构为数组，增删慢、查询快，线程不安全，效率高，每次扩容为原来数组的1.5倍。
 
-3. <font color = "red">ArrayList的底层是数组，数组的名称是什么？类型是什么？</font>
+3. ArrayList的底层是数组，数组的名称是什么？类型是什么？
 
    - 名称是`elementData`，类型是`Object[]`，所以`ArrayList`里面可以存放任意类型的元素。
 
-4. <font color = "red">ArrayList底层数组的默认初始化容量是多少？当超出这个大小时，每次扩容是多少？</font>
+4. ArrayList底层数组的默认初始化容量是多少？当超出这个大小时，每次扩容是多少？
 
    * 默认初始化容量是10。当超出这个大小时，每次扩容1.5倍。
 
-5. <font color = "red">LinkedList的底层是什么？</font>
+5. LinkedList的底层是什么？
 
    * 双向链表。
 
-6. <font color = "red">ArrayList里面可以存null吗？</font>
+6. ArrayList里面可以存null吗？
 
    * 可以。
 
-7. <font color = "red">ArrayList的底层是数组，它和数组有什么区别吗？</font>
+7. ArrayList的底层是数组，它和数组有什么区别吗？
 
    * ArrayList区别于数组的地方在于能够自动扩展大小，每次扩容1.5倍。
 
-8. <font color = "red">当向ArrayList集合中添加元素时需要调用add()方法，add()方法的执行流程是怎样的？</font>
+8. 当向ArrayList集合中添加元素时需要调用add()方法，add()方法的执行流程是怎样的？
 
    * 调用`add()`方法时，`add()`方法首先调用`ensureCapacityInternal()`来判断`elementData`数组容量是否足够。
 
@@ -46,36 +46,36 @@
 
    > 注意：如何扩容呢？会先创建一个原来数组1.5倍大小的新数组，然后将数据拷贝到新数组中。
 
-9. <font color = "red">在调用ArrayList的remove(int index)方法时，执行流程是怎样的？</font>
+9. 在调用ArrayList的remove(int index)方法时，执行流程是怎样的？
 
    * 首先判断`index`是否合理，如果合理的话，会调用`System.arraycopy()`方法把指定下标到数组末尾的元素向前移动一个单位，并且会把数组最后一个元素设为`null`。这样是为了方便GC回收。
 
-10. <font color = "red">ArrayList在调用get(int index)方法查询的时候，执行流程是怎样的？</font>
+10. ArrayList在调用get(int index)方法查询的时候，执行流程是怎样的？
 
     * 首先判断`index`是否合理，然后调用`elementData()`方法，`elementData()`方法返回根据i`ndex`查到的具体的元素。
 
     > 注意：这里的返回值都经过了向下转型（Object -> E）。
 
-11. <font color = "red">ArrayList的大小是如何自动增加的？你能分享一下你的代码吗？</font>
+11. ArrayList的大小是如何自动增加的？你能分享一下你的代码吗？
 
     * 当向`ArrayList`中增加一个对象的时候，Java首先会判断`ArrayList`的底层数组`elementData`是否还有足够的空间来存储这个对象，如果有，就直接存，如果没有，就会基于原有的数组扩容出一个1.5倍的新数组，并将数据全部复制到新数组中。
 
     > 请注意这样一个情况，新建了一个数组，旧数组的对象被复制到了新的数组中，并且现有的数组引用指向新的数组。
 
-12. <font color = "red">什么情况下你会使用ArrayList？什么情况下你会选择LinkedList？</font>
+12. 什么情况下你会使用ArrayList？什么情况下你会选择LinkedList？
 
     * 当对数据的主要操作为索引或只在集合的末端增加、删除数据时，使用`ArrayList`效率比较高；
     * 当对数据的操作主要为指定位置的插入或删除操作时，使用`LinkedList`效率比较高。
 
-13. <font color = "red">在ArrayList的增、删、改、查中，什么地方会修改modCount？</font>
+13. 在ArrayList的增、删、改、查中，什么地方会修改modCount？
 
     * 增如果导致扩容，则会修改`modCount`；删一定会修改`modCount`；改和查一定不会修改`modCount`。
 
-14. <font color = "red">为什么ArrayList在增、删的时候效率低？</font>
+14. 为什么ArrayList在增、删的时候效率低？
 
     * 因为在增、删的过程中会涉及到数组的复制，效率低。
 
-15. <font color = "red">ArrayList的时间复杂度是多少？</font>
+15. ArrayList的时间复杂度是多少？
 
     * 当修改、查询或者只在数组末尾增、删时，时间复杂度为`O(1)`；
     * 对指定位置的元素进行增、删时，时间复杂度为`O(n)`。
@@ -138,7 +138,7 @@
 
 ### 总结
 
-<font color = "red">**当对数据的主要操作为索引或者只在集合末端增加、删除元素时候，使用ArrayList效率比较高。当对数据的主要操作为指定位置的插入或者删除操作时，使用LinkedList效率比较高。**</font>
+**当对数据的主要操作为索引或者只在集合末端增加、删除元素时候，使用ArrayList效率比较高。当对数据的主要操作为指定位置的插入或者删除操作时，使用LinkedList效率比较高。**
 
 # 第二章 Map集合
 
