--- a/2第二阶段/2-03【存储引擎、索引】.md
+++ b/2第二阶段/2-03【存储引擎、索引】.md
@@ -444,10 +444,6 @@ MySQL中除了支持B+Tree索引，还支持一种索引类型---Hash索引。
 
 **为什么 InnoDB 存储引擎选择使用 B+Tree 索引结构？**
 
-- 相对于二叉树，层级更少，搜索效率高
-- 对于 B-Tree，无论是叶子节点还是非叶子节点，都会保存数据，这样导致一页中存储的键值减少，指针也跟着减少，要同样保存大量数据，只能增加树的高度，导致性能降低
-- 相对于 Hash 索引，B+Tree 支持范围匹配及排序操作
-
 - **B+ 树的磁盘读写代价更低**
 
   B+ 树的数据都集中在叶子节点，分支节点只负责指针（索引）；B 树的分支节点既有指针也有数据 。这将导致B+ 树的层高会小于B 树的层高，也就是说B+ 树平均的Io次数会小于B 树。
@@ -462,7 +458,7 @@ MySQL中除了支持B+Tree索引，还支持一种索引类型---Hash索引。
 
 - **B+树更擅长范围查询**
 
-  B+树叶子节点存放数据，数据是按顺序放置的双向链表。B树范围查询只能中序遍历。
+  B+树叶子节点存放数据，数据是按顺序放置的双向链表。B树范围查询只能中序遍历。Hash索引不支持范围匹配和排序操作。
 
 - **B+ 树占用内存空间小**
 
