--- a/1第一阶段/1-06【多线程】.md
+++ b/1第一阶段/1-06【多线程】.md
@@ -998,7 +998,7 @@ public static void myThreadPoolExecutor() {
 
 ![](D:\Java\笔记\图片\1-06【多线程】\2-11ThreadPoolExecutor.jpg)
 
-## 2.5 ThreadPoolExecutor 参数介绍
+## 2.5 ThreadPoolExecutor参数
 
 ThreadPoolExecutor 最多可以设置 7 个参数，如下代码所示：
 
