--- a/1第一阶段/1-16【数据结构】.md
+++ b/1第一阶段/1-16【数据结构】.md
@@ -455,3 +455,10 @@ public int treeDepth2(TreeNode root) {
 }
 ```
 
+# 第四章 Comparator
+
+Comparator接口可以实现自定义排序，实现Comparator接口时，要重写compare方法：
+int compare(Object o1, Object o2) 返回一个基本类型的整型
+
+* 如果要按照升序排序,则o1 小于o2，返回-1（负数），相等返回0，01大于02返回1（正数）
+* 如果要按照降序排序,则o1 小于o2，返回1（正数），相等返回0，01大于02返回-1（负数）
