--- a/第五阶段/5-0【日志】.md
+++ b/第五阶段/5-0【日志】.md
@@ -857,8 +857,7 @@ Logback主要分为三个模块：
 - logback-classic：它是log4j的一个改良版本，同时它完整实现了slf4j API
 - logback-access：访问模块与Servlet容器集成提供通过Http来访问日志的功能
 
-后续的日志代码都是通过SLF4J日志门面搭建日志系统，所以在代码是没有区别，主要是通过修改配置
-文件和pom.xml依赖
+后续的日志代码都是通过SLF4J日志门面搭建日志系统，所以在代码是没有区别，主要是通过修改配置文件和pom.xml依赖
 
 使用如下：首先导入slf4j日志门面，然后导入logback-classic
 
@@ -881,8 +880,7 @@ Logback主要分为三个模块：
 
 ```java
 //定义日志对象
-public final static Logger LOGGER =
-    LoggerFactory.getLogger(LogBackTest.class);
+public final static Logger LOGGER = LoggerFactory.getLogger(LogBackTest.class);
 @Test
 public void testSlf4j(){
     //打印日志信息
