--- a/1第一阶段/1-05【异常】.md
+++ b/1第一阶段/1-05【异常】.md
@@ -41,8 +41,6 @@
 
 ## 1.3 异常分类
 
-<!--P289-->
-
 我们平常说的异常就是指Exception，因为这类异常一旦出现，我们就要对代码进行更正，修复程序。
 
 **异常(Exception)的分类**：根据在编译时期还是运行时期去检查异常？
@@ -129,11 +127,11 @@ public class Demo01Exception {
 
 <!--P290-->
 
-先运行下面的程序，程序会产生一个数组索引越界异常ArrayIndexOfBoundsException。
+先运行下面的程序，程序会产生一个数组索引越界异常`ArrayIndexOfBoundsException`。
 
 ![异常的产生过程解析](..\图片\1-05【异常】\1-1.4 异常的产生过程解析.png)
 
-## 1.5 异常与中断与陷入
+## 1.5 异常 中断与陷入
 
 **中断/异常/陷入机制**是操作系统由用户态转为内核态的唯一途径，是操作系统的驱动力。
 
@@ -159,7 +157,7 @@ public class Demo01Exception {
 
 ### 中断与异常
 
-* <font color = "red">**中断、异常的区别**</font>
+* **中断、异常的区别**
 
   - 中断属外部事件，是正在运行的程序所不期望的
 
@@ -167,13 +165,13 @@ public class Demo01Exception {
   - **相同点：**都是**CPU**对**系统**发生的某**个事情**做出的**一种反应**。
   - **区别**：中断由外因引起，异常由CPU本身原因引起。
 
-* <font color = "red">**中断/异常的引入目的**</font>
+* **中断/异常的引入目的**
 
   - 中断的引入是为了CPU与设备之间的并行操作
 
   - 异常的引入是为了表示CPU执行指令时本身出现的问题
 
-* <font color = "red">**故障与陷入**</font>
+* **故障与陷入**
 
   - 缺页异常（page fault），由于是fault，所以当缺页异常处理完成之后，还会去尝试重新执行那条触发异常的指令（那时多半情况是不再缺页）
 
@@ -181,10 +179,10 @@ public class Demo01Exception {
 
 ### 中断与陷入
 
-* <font color = "red">**中断与陷入的联系**</font>
+* **中断与陷入的联系**
   * 外中断时指来自处理机和内存外部的中断,如I/O中断、定时器中断、外部信号中断等。狭义上也叫中断;
   * 内中断主要指在处理机和内存内部产生的中断，也称陷入，如校验错、页面失效、溢出、除数为零等。
-* <font color = "red">**中断与陷入的主要区别**</font>
+* **中断与陷入的主要区别**
   * 陷入通常由处理机正在执行的现行指令引起，而中断则是由与现行指令无关的中断源引起的。
   * 陷阱处理程序提供的服务为当前进程所用，而中断处理程序提供的服务则不是为了当前进程的。
   * CPU 在执行完一条指令之后，下一条指令开始之前响应中断，而在一条指令执行中也可以响应陷阱。
