--- a/1第一阶段/1-16【数据结构】.md
+++ b/1第一阶段/1-16【数据结构】.md
@@ -462,3 +462,13 @@ int compare(Object o1, Object o2) 返回一个基本类型的整型
 
 * 如果要按照升序排序,则o1 小于o2，返回-1（负数），相等返回0，01大于02返回1（正数）
 * 如果要按照降序排序,则o1 小于o2，返回1（正数），相等返回0，01大于02返回-1（负数）
+
+
+
+# 命名规则
+
+### 链表
+
+有dummy哑结点
+
+有cur现在的节点，不要让head节点移动，直接复制给cur，让cur节点移动
