--- a/2第二阶段/2-02【多表查询、设计范式、事务】.md
+++ b/2第二阶段/2-02【多表查询、设计范式、事务】.md
@@ -485,7 +485,7 @@ MySQL数据库中事务是默认自动提交的。
 | ---------- | ------------------------------------------------------------ |
 | 脏读       | 一个事务读到另一个事务还没提交的数据                         |
 | 不可重复读 | 一个事务先后读取同一条记录，但两次读取的数据不同             |
-| 幻读       | 一个事务按照条件查询数据时，没有对应的数据行，但是再插入数据时，**又发现这行数据已经存在** |
+| 幻读       | 一个事务按照条件查询数据时，没有对应的数据行，但是再插入数据时，又发现这行数据已经存在 |
 
 ## 7.3 事务四种隔离级别
 
