--- a/1第一阶段/1-00【Java基础1】.md
+++ b/1第一阶段/1-00【Java基础1】.md
@@ -1068,6 +1068,76 @@ public class ClassName{
 }
 ```
 
+### 4.3.5 Lombok
+
+**Lombok，一个Java类库，提供了一组注解，简化POJO实体类开发。**
+
+使用步骤如下：
+
+1. 添加lombok依赖。这是Maven里面的依赖。如果不是Maven工程，需要导入jar包。
+
+   ```xml
+   <dependency>
+       <groupId>org.projectlombok</groupId>
+       <artifactId>lombok</artifactId>
+       <!--版本可以不用写，因为SpringBoot中已经管理了lombok的版本。-->
+       <!--<version>1.18.12</version>-->
+   </dependency>
+   ```
+
+2. 模型类上添加注解
+
+   Lombok常见的注解有:
+
+   * `@Setter`:为模型类的属性提供setter方法
+
+   * `@Getter`:为模型类的属性提供getter方法
+
+   * `@ToString`:为模型类的属性提供toString方法
+
+   * `@EqualsAndHashCode`:为模型类的属性提供equals和hashcode方法
+
+   * `@Data`:**是个组合注解，包含上面的注解的功能**
+
+   * `@NoArgsConstructor`:提供一个无参构造函数
+
+   * `@AllArgsConstructor`:提供一个包含所有参数的构造函数
+
+   Lombok的注解还有很多，其他的后期用到了，再去补充学习。
+
+   ```java
+   @Data
+   @AllArgsConstructor
+   @NoArgsConstructor
+   public class User {
+       private Long id;
+       private String name;
+       private String password;
+       private Integer age;
+       private String tel;
+   }
+   ```
+
+Lombok只是简化模型类的编写，我们之前的方法也能用，比如有人会问：我如果只想要有name和password的构造函数，该如何编写?
+
+```java
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class User {
+    private Long id;
+    private String name;
+    private String password;
+    private Integer age;
+    private String tel;
+
+    public User(String name, String password) {
+        this.name = name;
+        this.password = password;
+    }
+}
+```
+
 ## 4.4 继承
 
 多个类中存在相同属性和行为时，将这些内容抽取到单独一个类中，那么多个类无需再定义这些属性和行为，只要继承那一个类即可。如图所示：
@@ -1414,3 +1484,78 @@ public class Test {
 }
 ```
 
+# 第五章 Dubug追踪
+
+**使用IDEA的断点调试功能，查看程序的运行过程**
+
+1. 在有效代码行，点击行号右边的空白区域，设置断点，程序执行到断点将停止，我们可以手动来运行程序 	
+
+   ![](D:\Java\笔记\图片\1-04\debug1.png)
+
+2. 点击Debug运行模式       
+
+   ![](D:\Java\笔记\图片\1-04\debug2.png)                                                                                                                                                                      
+
+3. 程序停止在断点上不再执行，而IDEA最下方打开了Debug调试窗口  
+
+    ![](D:\Java\笔记\图片\1-04\debug3.png)
+
+   ![](D:\Java\笔记\图片\1-04\debug4.png)
+
+4. Debug调试窗口介绍
+
+   ![](D:\Java\笔记\图片\1-04\debug5.png)
+
+5. 快捷键F8，代码向下执行一行,第九行执行完毕，执行到第10行（第10行还未执行）
+
+   ![](D:\Java\笔记\图片\1-04\debug6.png)
+
+6. 切换到控制台面板，控制台显示 请录入一个字符串： 并且等待键盘录入
+
+   ![](D:\Java\笔记\图片\1-04\debug7.png)
+
+7. 快捷键F8，程序继续向后执行，执行键盘录入操作，在控制台录入数据 ababcea
+
+   ![](D:\Java\笔记\图片\1-04\debug8.png)
+
+   回车之后效果：
+
+   ![](D:\Java\笔记\图片\1-04\debug9.png)
+
+   调试界面效果：
+
+   ![](D:\Java\笔记\图片\1-04\debug0.png)
+
+8. 此时到达findChar方法，快捷键F7，进入方法findChar
+
+   ![](D:\Java\笔记\图片\1-04\debug11.png)
+
+9. 快捷键F8 接续执行，创建了map对象，变量区域显示
+
+   ![](D:\Java\笔记\图片\1-04\debug12.png)
+
+10. 快捷键F8 接续执行，进入到循环中，循环变量i为 0,F8再继续执行，就获取到变量c赋值为字符‘a’ 字节值97
+
+    ![](D:\Java\笔记\图片\1-04\debug13.png)
+
+11. 快捷键F8 接续执行，进入到判断语句中，因为该字符 不在Map集合键集中，再按F8执行，进入该判断中
+
+    ![](D:\Java\笔记\图片\1-04\debug14.png)
+
+12. 快捷键F8 接续执行，循环结束，进入下次循环，此时map中已经添加一对儿元素
+
+    ![](D:\Java\笔记\图片\1-04\debug15.png)
+
+13. 快捷键F8 接续执行，进入下次循环，再继续上面的操作，我们就可以看到代码每次是如何执行的了
+
+    ![](D:\Java\笔记\图片\1-04\debug16.png)
+
+14. 如果不想继续debug,那么可以使用快捷键F9,程序正常执行到结束，程序结果在控制台显示
+
+    ![](D:\Java\笔记\图片\1-04\debug17.png)
+
+
+
+ 
+
+ 
