--- a/1第一阶段/1-00【Java基础2】.md
+++ b/1第一阶段/1-00【Java基础2】.md
@@ -997,105 +997,55 @@ public class Test {
 
 > 接口作为参数时，传递它的子类对象。 接口作为返回值类型时，返回它的子类对象。
 
-# 第四章 常见的类
+# 第四章 包装类
 
-首先来介绍一下API：`API(Application Programming Interface)`，应用程序编程接口。Java API是一本程序员的 字典 ，是JDK中提供给我们使用的类的说明文档。这些类将底层的代码实现封装了起来，我们不需要关心这些类是如何实现的，只需要学习这些类如何使用即可。所以我们可以通过查询API的方式，来学习Java提供的类，并得知如何使用它们。
+**为了让基本类型也具有对象的特征，就出现了包装类型**
 
-使用步骤如下：
+Java提供了两个类型系统，基本类型与引用类型，使用基本类型在于效率，然而很多情况，会创建对象使用，因为对象可以做更多的功能，如果想要我们的基本类型像对象一样操作，就可以使用基本类型对应的包装类，如下：
 
-1. 打开帮助文档。
-2. 点击显示，找到索引，看到输入框。
-3. 你要找谁？在输入框里输入，然后回车。
-4. 看包。java.lang下的类不需要导包，其他需要。
-5. 看类的解释和说明。
-6. 学习构造方法。
+| 基本类型和所占用字节数 | 对应的包装类（位于java.lang包中） |
+| :--------------------: | :-------------------------------: |
+|     byte【1字节】      |               Byte                |
+|     short【2字节】     |               Short               |
+|      int【4字节】      |              Integer              |
+|     long【8字节】      |               Long                |
+|     float【4字节】     |               Float               |
+|    double【8字节】     |              Double               |
+|     char【2字节】      |             Character             |
+|    boolean【1字节】    |              Boolean              |
 
-## 4.1 Scanner类
+## 4.1 装箱与拆箱
 
-一个可以解析基本类型和字符串的简单文本扫描器。 例如，以下代码使用户能够从 `System.in` 中读取一个数：
+基本类型与对应的包装类对象之间，来回转换的过程称为”装箱“与”拆箱“：
 
-```java
-// System.in 系统输入指的是通过键盘录入数据。
-Scanner sc = new Scanner(System.in);
-int i = sc.nextInt();
-```
+* **装箱**：从基本类型转换为对应的包装类对象。
 
-使用步骤如下：
+* **拆箱**：从包装类对象转换为对应的基本类型。
 
-- **导包**
-  使用import关键字导包，在类的所有代码之前导包，引入要使用的类型，java.lang包下的所有类无需导入。 格式：`import 包名.类名;` 例如：`import java.util.Scanner;`
-- **创建对象**
-  使用该类的构造方法，创建一个该类的对象。 格式：`数据类型 变量名 = new 数据类型(参数列表);`
-- **调用方法**
-  调用该类的成员方法，完成指定功能。 格式：`变量名.方法名();`
+用Integer与 int为例：
 
-常见方法如下：
+* 基本数值---->包装对象
 
-- `public Scanner(InputStream source)` : 构造一个新的 Scanner ，它生成的值是从指定的输入流扫描的。
-- `public int nextInt()` ：将输入信息的下一个标记扫描为一个 int 值。
+  ```java
+  Integer i = new Integer(4); // 使用构造函数函数
+  Integer iii = Integer.valueOf(4); // 使用包装类中的valueOf方法
+  ```
 
-## 4.2 Random类
+* 包装对象---->基本数值
 
-此类的实例用于生成伪随机数。
+  ```java
+  int num = i.intValue();
+  ```
 
-例如，以下代码使用户能够得到一个随机数：
+## 4.2 自动装箱与自动拆箱
 
-```java
-Random r = new Random();
-int i = r.nextInt();
-```
-
-常见的方法如下：
-
-- `public Random()` ：创建一个新的随机数生成器。
-- `public int nextInt(int n)` ：返回一个伪随机数，范围在 0 （包括）和 指定值 n （不包括）之间的 int 值。
-
-## 4.3 ArrayList类
-
-我们想存储对象数据，选择的容器，只有对象数组。而数组的长度是固定的，无法适应数据变化的需求。为了解决这个问题，Java提供了另一个容器 java.util.ArrayList 集合类,让我们可以更便捷的存储和操作对象数据。
-
-`java.util.ArrayList` 是大小可变的数组的实现，存储在内的数据称为元素。此类提供一些方法来操作内部存储的元素。 `ArrayList` 中可不断添加元素，其大小也自动增长。
-
-### 4.3.1 泛型
-
-`java.util.ArrayList  <E>` ，表示一种指定的数据类型，叫做泛型。 `E` ，取自Element（元素）的首字母。在出现 `E` 的地方，我们使用一种引用数据类型将其替换即可，表示我们将存储哪种引用类型的元素。
-
-常用方法如下：
-
-- `public ArrayList()` ：构造一个内容为空的集合。
-- `public boolean add(E e)` ： 将指定的元素添加到此集合的尾部。
-- `public boolean add(E e)` ：将指定的元素添加到此集合的尾部。
-- `public E remove(int index)` ：移除此集合中指定位置上的元素。返回被删除的元素。
-- `public E get(int index)` ：返回此集合中指定位置上的元素。返回获取的元素。
-- `public int size()` ：返回此集合中的元素数。遍历集合时，可以控制索引范围，防止越界。
-
-ArrayList对象不能存储基本类型，只能存储引用类型的数据。类似`<int>`不能写，但是存储基本数据类型对应的 包装类型是可以的。所以，想要存储基本类型数据， `<>` 中的数据类型，必须转换后才能编写，转换写法如下：
-
-| 基本类型 | 基本类型包装类 |
-| -------- | -------------- |
-| byte     | Byte           |
-| short    | Short          |
-| int      | Integer        |
-| long     | Long           |
-| float    | Float          |
-| double   | Double         |
-| char     | Character      |
-| boolean  | Boolean        |
-
-### 4.3.2 自动拆箱装箱
-
-**装箱就是自动将基本数据类型转换为包装器类型；拆箱就是自动将包装器类型转换为基本数据类型。**
+由于我们经常要做基本类型与包装类之间的转换，从Java 5（JDK 1.5）开始，基本类型与包装类的装箱、拆箱动作可以自动完成。例如：
 
 ```java
-Integer i = 10; //装箱
-int n = i;  //拆箱
+Integer i = 4; // 自动装箱。相当于Integer i = Integer.valueOf(4);
+i = i + 5; // 等号右边：将i对象转成基本数值(自动拆箱) i.intValue() + 5;
+// 加法运算完成后，再次装箱，把基本数值转成对象。
 ```
-
-![img](D:\Java\笔记\图片\Java版本\自动拆箱)
-
-在Java中每种基本数据类型都会存在对应的包装器类型，为什么这么设计？
-
-Java是一个面相对象的编程语言，基本类型并不具有对象的性质，为了让基本类型也具有对象的特征，就出现了包装类型（如我们在使用集合类型Collection时就一定要使用包装类型而非基本类型），它相当于将基本类型“包装起来”，使得它具有了对象的性质，并且为其添加了属性和方法，丰富了基本类型的操作。
 
 看一下下面的题目：
 
@@ -1114,57 +1064,48 @@ public class Main {
 }
 ```
 
-为什么会这样呢？看下Integer的valueOf方法的具体实现：
+为什么会这样呢？看下`Integer`的`valueOf`方法的具体实现：
 
 ```java
 public static Integer valueOf(int i) {
-	final int offset = 128;
-	if (i >= -128 && i <= 127) { // must cache 
-	    return IntegerCache.cache[i + offset];
-	}
-        return new Integer(i);
+    final int offset = 128;
+    if (i >= -128 && i <= 127) { // must cache 
+        return IntegerCache.cache[i + offset];
     }
+    return new Integer(i);
+}
 ```
 
 而其中`IntegerCache`类的实现为：
 
 ```java
+// 省略了很多
 private static class IntegerCache {
     private IntegerCache(){}
-    static final Integer cache[] = new Integer[-(-128) + 127 + 1];
- 
+    static final Integer cache[] = new Integer[127 - (-128) + 1];
+
     static {
         for(int i = 0; i < cache.length; i++)
-	    cache[i] = new Integer(i - 128);
+            cache[i] = new Integer(i - 128);
     }
 }
 ```
 
-由上可知，Integer包装类型如果数值在[-128,127]之间，便返回指向IntegerCache.cache中已经存在的对象的引用；否则创建一个新的Integer对象。
+由上可知，Integer包装类型如果数值在[-128,127]之间，便返回指向`IntegerCache.cache`中已经存在的对象的引用；否则创建一个新的Integer对象。
 
-我们会联想到其他的包装类类型是否也有这样的规律，看下Double的valueof方法的实现：
-
-```java
-public static Double valueOf(double d) {
-        return new Double(d);
-}
-```
-
-想想原因很简单：在某个范围内的整型数值的个数是有限的，而浮点数却不是。
-
-注意，Integer、Short、Byte、Character、Long这几个类的valueOf方法的实现是类似的。Double、Float的valueOf方法的实现是类似的。
+Integer、Short、Byte、Character、Long这几个类的valueOf方法的实现是类似的，而Double、Float的valueOf方法的实现就和他们不一样了，这是因为他们都是浮点数，根部无法确定值。
 
 对于Boolean类型比较一下就一目了然：
 
 ```java
 public class Main {
     public static void main(String[] args) {
-         
+
         Boolean i1 = false;
         Boolean i2 = false;
         Boolean i3 = true;
         Boolean i4 = true;
-         
+
         System.out.println(i1==i2);    //true
         System.out.println(i3==i4);    //true
     }
@@ -1175,15 +1116,10 @@ public class Main {
 
 ```java
 public static Boolean valueOf(boolean b) {
-        return (b ? TRUE : FALSE);
-    }
-```
+    return (b ? TRUE : FALSE);
+}
 
-TRUE和FALSE都是静态常量
-
-```java
 public static final Boolean TRUE = new Boolean(true);
- 
 public static final Boolean FALSE = new Boolean(false);
 ```
 
@@ -1235,88 +1171,359 @@ public boolean equals(Object obj) {
 
 指定equals比较的是内容本身，并且我们也可以看到equals的参数是一个Object对象，我们传入的是一个int类型，所以首先会进行装箱，然后比较，之所以返回true，是由于它比较的是对象里面的value值。当内容和类型都相同时才会返回true。
 
-## 4.4 String类
+## 4.3 基本类型与字符串转换
 
-`java.lang.String` 类代表字符串。Java程序中所有的字符串文字（例如 "abc" ）都可以被看作是实现此类的实例。此类不需要导入。因为是lang包下面的。
+基本类型转换String总共有三种方式，查看课后资料可以得知，这里只讲最简单的一种方式： 
 
-类 `String` 中包括用于检查各个字符串的方法，比如用于比较字符串，搜索字符串，提取子字符串以及创建具有翻译为大写或小写的所有字符的字符串的副本。
+~~~
+基本类型直接与""相连接即可；如：34+""
+~~~
 
-特点如下：
+String转换成对应的基本类型 
 
-1. 字符串不变：字符串的值在创建后不能被更改。
+除了Character类之外，其他所有包装类都具有parseXxx静态方法可以将字符串参数转换为对应的基本类型：
 
-   ```java
-   String s1 = "abc";
-   s1 += "d";
-   System.out.println(s1); // "abcd"
-   // 内存中有"abc"，"abcd"两个对象，s1从指向"abc"，改变指向，指向了"abcd"。
-   ```
+- `public static byte parseByte(String s)`：将字符串参数转换为对应的byte基本类型。
+- `public static short parseShort(String s)`：将字符串参数转换为对应的short基本类型。
+- `public static int parseInt(String s)`：将字符串参数转换为对应的int基本类型。
+- `public static long parseLong(String s)`：将字符串参数转换为对应的long基本类型。
+- `public static float parseFloat(String s)`：将字符串参数转换为对应的float基本类型。
+- `public static double parseDouble(String s)`：将字符串参数转换为对应的double基本类型。
+- `public static boolean parseBoolean(String s)`：将字符串参数转换为对应的boolean基本类型。
 
-2.  因为String对象是不可变的，所以它们可以被共享。
+```java
+public class Demo18WrapperParse {
+    public static void main(String[] args) {
+        int num = Integer.parseInt("100");
+    }
+}
+```
 
-   ```java
-   String s1 = "abc";
-   String s2 = "abc";
-   // 内存中只有一个"abc"对象被创建，同时被s1和s2共享。
-   ```
+> 注意:如果字符串参数的内容无法正确转换为对应的基本类型，则会抛出`java.lang.NumberFormatException`异常。
 
-3. `"abc"` 等效于 `char[] data={ 'a' , 'b' , 'c' }` 。
+# 第五章 泛型
 
-   ```java
-   例如：
-   String str = "abc";
-   相当于：
-   char data[] = {'a', 'b', 'c'};
-   String str = new String(data);
-   // String底层是靠字符数组实现的。
-   ```
+## 3.1  泛型概述
 
-构造方法如下：
+在前面学习集合时，我们都知道集合中是可以存放任意对象的，只要把对象存储集合后，那么这时他们都会被提升成Object类型。当我们在取出每一个对象，并且进行相应的操作，这时必须采用类型转换。
 
-- `public String()` ：初始化新创建的 String对象，以使其表示空字符序列。
-- `public String(char[] value)` ：通过当前参数中的字符数组来构造新的String。
-- `public String(byte[] bytes)` ：通过使用平台的默认字符集解码当前参数中的字节数组来构造新的String。
+大家观察下面代码：
 
-判断功能的方法：
+~~~java
+public class GenericDemo {
+	public static void main(String[] args) {
+		Collection coll = new ArrayList();
+		coll.add("abc");
+		coll.add("itcast");
+		coll.add(5);//由于集合没有做任何限定，任何类型都可以给其中存放
+		Iterator it = coll.iterator();
+		while(it.hasNext()){
+			//需要打印每个字符串的长度,就要把迭代出来的对象转成String类型
+			String str = (String) it.next();
+			System.out.println(str.length());
+		}
+	}
+}
+~~~
 
-- `public boolean equals (Object anObject)` ：将此字符串与指定对象进行比较。
-- `public boolean equalsIgnoreCase (String anotherString)` ：将此字符串与指定对象进行比较，忽略大小写。
+程序在运行时发生了问题**java.lang.ClassCastException**。                                                                                             为什么会发生类型转换异常呢？                                                                                                                                       我们来分析下：由于集合中什么类型的元素都可以存储。导致取出时强转引发运行时 ClassCastException。                                                                                                                                                       怎么来解决这个问题呢？                                                                                                                                                           Collection虽然可以存储各种对象，但实际上通常Collection只存储同一类型对象。例如都是存储字符串对象。因此在JDK5之后，新增了**泛型**(**Generic**)语法，让你在设计API时可以指定类或方法支持泛型，这样我们使用API的时候也变得更为简洁，并得到了编译时期的语法检查。
 
-获取功能的方法：
+* **泛型**：可以在类或方法中预支地使用未知的类型。
 
-- `public int length ()` ：返回此字符串的长度。
-- `public String concat (String str)` ：将指定的字符串连接到该字符串的末尾。
-- `public char charAt (int index)` ：返回指定索引处的 char值。
-- `public int indexOf (String str)` ：返回指定子字符串第一次出现在该字符串内的索引。
-- `public String substring (int beginIndex)` ：返回一个子字符串，从beginIndex开始截取字符串到字符串结尾。
-- `public String substring (int beginIndex, int endIndex)` ：返回一个子字符串，从beginIndex到endIndex截取字符串。含beginIndex，不含endIndex。
+> tips:一般在创建对象时，将未知的类型确定具体的类型。当没有指定泛型时，默认类型为Object类型。
 
-转换字符串的方法：
+## 3.2  使用泛型的好处
 
-- `public char[] toCharArray ()` ：将此字符串转换为新的字符数组。
-- `public byte[] getBytes ()` ：使用平台的默认字符集将该 String编码转换为新的字节数组。
-- `public String replace (CharSequence target, CharSequence replacement)` ：将与target匹配的字符串使用replacement字符串替换。
+上一节只是讲解了泛型的引入，那么泛型带来了哪些好处呢？
 
-分割字符串的方法：
+* 将运行时期的ClassCastException，转移到了编译时期变成了编译失败。
+* 避免了类型强转的麻烦。
 
-- `public String[] split(String regex)` ：将此字符串按照给定的regex（规则）拆分为字符串数组。
+通过我们如下代码体验一下：
 
-## 4.5 Arrays类
+~~~java
+public class GenericDemo2 {
+	public static void main(String[] args) {
+        Collection<String> list = new ArrayList<String>();
+        list.add("abc");
+        list.add("itcast");
+        // list.add(5);//当集合明确类型后，存放类型不一致就会编译报错
+        // 集合已经明确具体存放的元素类型，那么在使用迭代器的时候，迭代器也同样会知道具体遍历元素类型
+        Iterator<String> it = list.iterator();
+        while(it.hasNext()){
+            String str = it.next();
+            //当使用Iterator<String>控制元素类型后，就不需要强转了。获取到的元素直接就是String类型
+            System.out.println(str.length());
+        }
+	}
+}
+~~~
 
-`java.util.Arrays` 此类包含用来操作数组的各种方法，比如排序和搜索等。其所有方法均为静态方法，调用起来非常简单。
+> tips:泛型是数据类型的一部分，我们将类名与泛型合并一起看做数据类型。
 
-操作数组的方法：
+## 3.3  泛型的定义与使用
 
-- `public static String toString(int[] a)` ：返回指定数组内容的字符串表示形式。
-- `public static void sort(int[] a)` ：对指定的 int 型数组按数字升序进行排序。
+我们在集合中会大量使用到泛型，这里来完整地学习泛型知识。
 
-## 4.6 Math类
+泛型，用来灵活地将数据类型应用到不同的类、方法、接口当中。将数据类型作为参数进行传递。
 
-`java.lang.Math` 类包含用于执行基本数学运算的方法，如初等指数、对数、平方根和三角函数。类似这样的工具类，其所有方法均为静态方法，并且不会创建对象，调用起来非常简单。
+### 定义和使用含有泛型的类
 
-基本方法如下：
+定义格式：
 
-- `public static double abs(double a)` ：返回 double 值的绝对值。
-- `public static double ceil(double a)` ：返回大于等于参数的最小的整数。
-- `public static double floor(double a)` ：返回小于等于参数最大的整数。
-- `public static long round(double a)` ：返回最接近参数的 long。(相当于四舍五入方法）
+~~~
+修饰符 class 类名<代表泛型的变量> {  }
+~~~
+
+例如，API中的ArrayList集合：
+
+~~~java
+class ArrayList<E>{ 
+    public boolean add(E e){ }
+
+    public E get(int index){ }
+   	....
+}
+~~~
+
+使用泛型： 即什么时候确定泛型。
+
+**在创建对象的时候确定泛型**
+
+ 例如，`ArrayList<String> list = new ArrayList<String>();`
+
+此时，变量E的值就是String类型,那么我们的类型就可以理解为：
+
+~~~java 
+class ArrayList<String>{ 
+     public boolean add(String e){ }
+
+     public String get(int index){  }
+     ...
+}
+~~~
+
+再例如，`ArrayList<Integer> list = new ArrayList<Integer>();`
+
+此时，变量E的值就是Integer类型,那么我们的类型就可以理解为：
+
+~~~java
+class ArrayList<Integer> { 
+     public boolean add(Integer e) { }
+
+     public Integer get(int index) {  }
+     ...
+}
+~~~
+
+举例自定义泛型类
+
+~~~java
+public class MyGenericClass<MVP> {
+	//没有MVP类型，在这里代表 未知的一种数据类型 未来传递什么就是什么类型
+	private MVP mvp;
+     
+    public void setMVP(MVP mvp) {
+        this.mvp = mvp;
+    }
+     
+    public MVP getMVP() {
+        return mvp;
+    }
+}
+~~~
+
+使用:
+
+~~~java
+public class GenericClassDemo {
+  	public static void main(String[] args) {		 
+         // 创建一个泛型为String的类
+         MyGenericClass<String> my = new MyGenericClass<String>();    	
+         // 调用setMVP
+         my.setMVP("大胡子登登");
+         // 调用getMVP
+         String mvp = my.getMVP();
+         System.out.println(mvp);
+         //创建一个泛型为Integer的类
+         MyGenericClass<Integer> my2 = new MyGenericClass<Integer>(); 
+         my2.setMVP(123);   	  
+         Integer mvp2 = my2.getMVP();
+    }
+}
+~~~
+
+###  含有泛型的方法
+
+定义格式：
+
+~~~
+修饰符 <代表泛型的变量> 返回值类型 方法名(参数){  }
+~~~
+
+例如，
+
+~~~java
+public class MyGenericMethod {	  
+    public <MVP> void show(MVP mvp) {
+    	System.out.println(mvp.getClass());
+    }
+    
+    public <MVP> MVP show2(MVP mvp) {	
+    	return mvp;
+    }
+}
+~~~
+
+使用格式：**调用方法时，确定泛型的类型**
+
+~~~java
+public class GenericMethodDemo {
+    public static void main(String[] args) {
+        // 创建对象
+        MyGenericMethod mm = new MyGenericMethod();
+        // 演示看方法提示
+        mm.show("aaa");
+        mm.show(123);
+        mm.show(12.45);
+    }
+}
+~~~
+
+### 含有泛型的接口
+
+定义格式：
+
+~~~
+修饰符 interface接口名<代表泛型的变量> {  }
+~~~
+
+例如，
+
+~~~java
+public interface MyGenericInterface<E>{
+	public abstract void add(E e);
+	
+	public abstract E getE();  
+}
+~~~
+
+使用格式：
+
+**1、定义类时确定泛型的类型**
+
+例如
+
+~~~java
+public class MyImp1 implements MyGenericInterface<String> {
+	@Override
+    public void add(String e) {
+        // 省略...
+    }
+
+	@Override
+	public String getE() {
+		return null;
+	}
+}
+~~~
+
+此时，泛型E的值就是String类型。
+
+ **2、始终不确定泛型的类型，直到创建对象时，确定泛型的类型**
+
+ 例如
+
+~~~java
+public class MyImp2<E> implements MyGenericInterface<E> {
+	@Override
+	public void add(E e) {
+       	 // 省略...
+	}
+
+	@Override
+	public E getE() {
+		return null;
+	}
+}
+~~~
+
+确定泛型：
+
+~~~java
+/*
+ * 使用
+ */
+public class GenericInterface {
+    public static void main(String[] args) {
+        MyImp2<String>  my = new MyImp2<String>();  
+        my.add("aa");
+    }
+}
+~~~
+
+## 3.4  泛型通配符
+
+当使用泛型类或者接口时，传递的数据中，泛型类型不确定，可以通过通配符<?>表示。但是一旦使用泛型的通配符后，只能使用Object类中的共性方法，集合中元素自身方法无法使用。
+
+#### 通配符基本使用
+
+泛型的通配符:**不知道使用什么类型来接收的时候,此时可以使用?,?表示未知通配符。**
+
+此时只能接受数据,不能往该集合中存储数据。
+
+举个例子大家理解使用即可：
+
+~~~java
+public static void main(String[] args) {
+    Collection<Intger> list1 = new ArrayList<Integer>();
+    getElement(list1);
+    Collection<String> list2 = new ArrayList<String>();
+    getElement(list2);
+}
+public static void getElement(Collection<?> coll){}
+//？代表可以接收任意类型
+~~~
+
+> tips:泛型不存在继承关系 Collection<Object> list = new ArrayList<String>();这种是错误的。
+
+#### 通配符高级使用----受限泛型
+
+之前设置泛型的时候，实际上是可以任意设置的，只要是类就可以设置。但是在JAVA的泛型中可以指定一个泛型的**上限**和**下限**。
+
+**泛型的上限**：
+
+* **格式**： `类型名称 <? extends 类 > 对象名称`
+* **意义**： `只能接收该类型及其子类`
+
+**泛型的下限**：
+
+- **格式**： `类型名称 <? super 类 > 对象名称`
+- **意义**： `只能接收该类型及其父类型`
+
+比如：现已知Object类，String 类，Number类，Integer类，其中Number是Integer的父类
+
+~~~java
+public static void main(String[] args) {
+    Collection<Integer> list1 = new ArrayList<Integer>();
+    Collection<String> list2 = new ArrayList<String>();
+    Collection<Number> list3 = new ArrayList<Number>();
+    Collection<Object> list4 = new ArrayList<Object>();
+    
+    getElement(list1);
+    getElement(list2);//报错
+    getElement(list3);
+    getElement(list4);//报错
+  
+    getElement2(list1);//报错
+    getElement2(list2);//报错
+    getElement2(list3);
+    getElement2(list4);
+  
+}
+// 泛型的上限：此时的泛型?，必须是Number类型或者Number类型的子类
+public static void getElement1(Collection<? extends Number> coll){}
+// 泛型的下限：此时的泛型?，必须是Number类型或者Number类型的父类
+public static void getElement2(Collection<? super Number> coll){}
+~~~
+
