--- a/1第一阶段/1-05【异常】.md
+++ b/1第一阶段/1-05【异常】.md
@@ -1,7 +1,5 @@
 # 第一章 异常
 
-## 1.1 异常概念
-
 异常，就是不正常的意思。在生活中：医生说，你的身体某个部位有异常，该部位和正常相比有点不同，该部位的功能将受到影响。在程序中的意思是：
 
 * **异常**：指的是程序在执行过程中，出现的非正常的情况，最终会导致JVM的非正常停止。
@@ -10,7 +8,7 @@
 
 > 异常指的并不是语法错误，语法错了，编译不通过，不会产生字节码文件，根本不能运行。
 
-## 1.2 异常体系
+## 1.1 异常体系
 
 异常机制其实就是帮助我们**找到**程序中的问题，异常的根类是`java.lang.Throwable` ，其下有两个子类：`java.lang.Error`与`java.lang.Exception`，平常所说的异常指`java.lang.Exception`。 
 
@@ -37,9 +35,9 @@
 
 * `public String toString()`：获取异常的类型和异常描述信息(不用)。
 
-**出现异常，不要紧张，把异常的简单类型名，拷贝到API中去查。**
+出现异常，不要紧张，把异常的简单类型名，拷贝到API中去查。
 
-## 1.3 异常分类
+## 1.2 异常分类
 
 我们平常说的异常就是指Exception，因为这类异常一旦出现，我们就要对代码进行更正，修复程序。
 
@@ -51,10 +49,6 @@
 **代码如下：**
 
 ```java
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.util.Date;
-
 public class Demo01Exception {
     public static void main(String[] args) throws ParseException {
         // Exception:编译时期异常，进行编译（写代码）java程序出现的问题
@@ -67,10 +61,6 @@ public class Demo01Exception {
 ```
 
 ```java
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.util.Date;
-
 public class Demo01Exception {
     public static void main(String[] args) {
         // Exception:编译时期异常，进行编译（写代码）java程序出现的问题
@@ -747,8 +737,6 @@ public class RegisterException extends Exception{
 ```
 
 ## 3.2 自定义异常的练习
-
-<!--P301-->
 
 要求：我们模拟注册操作，如果用户名已经存在，则抛出异常并提示：亲，该用户名已经被注册。
 
